samples/_failures_safe/1761538721_e4146e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_142ca81c.c: In function ‘main’:
./samples/SAFE/__tmp_142ca81c.c:145:23: error: expected ‘)’ at end of input
  145 |     if (graph_add_edge
      |        ~              ^
      |                       )
./samples/SAFE/__tmp_142ca81c.c:145:5: error: expected declaration or statement at end of input
  145 |     if (graph_add_edge
      |     ^~
